<resources>
    <string name="app_name">共享淘支付</string>
    <string name="home">首页</string>
    <string name="classify">分类</string>
    <string name="goldPoint">淘点</string>
    <string name="me">我的</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="cancle">取消</string>
    <string name="sure">确认</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>
    <string name="translate_up_down_behavior">com.hmkj.taozhifu.ui.TranslateUpDownBehavior</string>
    <string-array name="order_title">
        <item>全部</item>
        <item>待付款</item>
        <item>待使用</item>
        <item>待评价</item>
        
    </string-array>
    <string name="eug">扫一扫</string>
    <string name="eug_pay">扫一扫付款</string>
    <string name="shopClassify">分类</string>
    <string name="tv_all">全部</string>
    <string name="voucher">抵用券(元)</string>
    <string name="shop_ticket">商超劵(元)</string>
    <string name="cash">现金(元)</string>
    <string name="voucher_s">抵用券</string>
    <string name="shop_ticket_s">商超劵</string>
    <string name="cash_s">现金</string>
    <string name="taoPay">淘积分</string>
    <string name="wx_pay">微信支付</string>
    <string name="zfb_pay">支付宝支付</string>
    <string name="vip">点击升级VIP</string>
    <string name="myOrder">我的订单</string>
    <string name="message">消息</string>
    <string name="takeAdress">收货地址</string>
    <string name="defealtAdress">默认地址</string>
    <string name="myWallet">我的钱包</string>
    <string name="myTrain">在线培训</string>
    <string name="myCollect">我的收藏</string>
    <string name="myStore">我的店铺</string>
    <string name="myBalance">我的余额(元)</string>
    <string name="myBalance_s">余额¥0.0</string>
    <string name="Withdraw">提现</string>
    <string name="WithdrawRule">提现规则</string>
    <string name="myAll">全部</string>
    <string name="income">收入</string>
    <string name="expend">支出</string>
    <string name="arrive_account">请选择提现方式</string>
    <string name="bind_wx">授权微信</string>
    <string name="bind_ZFB">授权支付宝</string>
    <string name="waitPay">待付款</string>
    <string name="waitUse">待使用</string>
    <string name="waitEvaluate">待评价</string>
    <string name="refundMoney">退款/售后</string>
    <string name="forgetPwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="codeLogin">验证码登录</string>
    <string name="regist">快速注册</string>
    <string name="next">下一步</string>
    <string name="input_name">请输入真实姓名</string>
    <string name="setting_pwd">设置密码</string>
    <string name="setting_pwds">请再次确认密码</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="input_alipay">请输入支付宝账号</string>
    <string name="input_inviter_code">请输入邀请码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="input_code">请输入验证码</string>
    <string name="take_code">获取验证码</string>
    <string name="tixian_money">提现金额</string>
    <string name="all_tixian">全部提现</string>
    <string name="sure_tixian">确认提现</string>
    <string name="my_read">我已同意共享淘支付</string>
    <string name="per_deal">《商户协议》</string>
    <string name="commodityJiaInfo">商家信息</string>
    <string name="tv_phone">电话</string>
    <string name="tv_commodityJia">商家</string>
    <string name="commodityIntroduce">商品介绍</string>
    <string name="shopIntroduce">商家介绍</string>
    <string name="buy_realize">购买须知</string>
    <string name="head_portrait">头像</string>
    <string name="sex">性别</string>
    <string name="real_name">真实姓名</string>
    <string name="login_pwd">登录密码</string>
    <string name="pay_pwd">支付密码</string>
    <string name="please_pay_pwd">请输入支付密码</string>
    <string name="no_all">未完善</string>
    <string name="save">保存</string>
    <string name="tv_immediately_convert">立即兑换</string>
    <string name="tv_immediately_sale">立即买单</string>
    <string name="tv_show_all_assess">查看全部评价</string>
    <string name="tv_valid_date">有效日期</string>
    <string name="tv_convert_way">兑换方式</string>
    <string name="tv_use_rule">使用规则</string>
    <string name="complete">完成</string>
    <string name="tv_hot_commodity">本店热品</string>
    <string name="click_upgrade">点击升级</string>
    <string name="saveCode">保存二维码</string>
    <string name="version_update">版本更新</string>
    <string name="contact_our">联系我们</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_me">关于我们</string>
    <string name="exit_login">退出登录</string>
    <string name="invite_QRcode">邀请二维码</string>
    <string name="tv_commodity_particulars">商品详情</string>
    <string name="tv_do_business_data">营业时间</string>
    <string name="tv_money_person">¥%s/人</string>
    <string name="tv_distance">%skm</string>
    <string name="tv_distanceK">%skm</string>
    <string name="tv_distanceM">%sm</string>
    <string name="tv_user_comments">用户评价</string>
    <string name="tv_shop_collection">商家(%d)</string>
    <string name="tv_commodity_collection">商品(%d)</string>
    <string name="tv_money">¥%s</string>
    <string name="tv_balance">(余额¥%s)</string>
    <string name="tv_balance_s">余额¥%s</string>
    <string name="tv_delete">删除</string>
    <string name="real_name_hint">用户您好,由于用户的真实姓名与后期提现直接相关.提交后不能修改,请认真填写您的真实姓名!</string>
    <string name="tv_no_attention_shop">暂无关注的商家</string>
    <string name="tv_shop_classify_content">亲，目前还没有该分类的商家，敬请期待吧</string>
    <string name="tv_go_home">逛逛首页吧</string>
    <string name="tv_notice_details">公告详情</string>
    <string name="tv_notice">公告</string>
    <string name="tv_submit_order">提交订单</string>
    <string name="tv_pay_success">支付成功</string>
    <string name="tv_complete">完成</string>
    <string name="tv_true_pay">确认支付</string>
    <string name="tv_pay">支付</string>
    <string name="pwd_geshi">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string-array name="my_wallet">
        <item>全部</item>
        <item>收入</item>
        <item>支出</item>
    </string-array>
    <string-array name="tao_dian">
        <item>收入</item>
        <item>支出</item>
    </string-array>
    <string-array name="exchange_order">
        <item>全部</item>
        <item>待使用</item>
        <item>已使用</item>
        <item>已完成</item>
    </string-array>
    <string-array name="my_message">
        <item>订单</item>
        <item>系统</item>
    </string-array>
    <string name="share_description">消费成创客，分享就赚钱，让消费的钱每天都给你分红！</string>
    <string name="share_title">共享淘支付</string>
    <string name="tvKindlyReminder">在你注销店铺后，所有关于您的店铺信息和商品信息将不会出现在我们的APP上，请慎重考虑。如有疑问，请拨打我们的客服电话</string>
    <string name="RMB">¥</string>
    <string name="connect_us">028-65999758</string>
    <string name="aboutOur">关于我们</string>
    <string name="about_us">\t\t\t\t四川掌尚融通电子商务公司，旗下共享金融商业共享淘支付平台—是全球最具有代表性电子商务平台。\n\t\t\t\t创客、消费者、商家，共享淘支付平台是一个以“创消商”为主体，将创客、消费者和商家有效串联的产销合一的新型电子商务平台。共享淘支付平台提出创客、消费者和商家都是老板的新概念——创消商。创消商具有创客、消费者和商家的三重身份，相互之间可以转化，大家都是这个平台的生产者、消费者、经营者、合作者和管理者。\n\t\t\t\t全球消费者相互服务，相互支持，你中有我，我中有你。真正形成一个资源共享，产消共生的利益共同体，从而达到共享淘支付平台提倡的让每一个平凡人都过上高品质生活的企业理念。\n\t\t\t\t 共享淘支付平台致力于打造一个具有高效率、高品质、低价格、低门槛的电子商务平台。商品直接对接货源上架，每个人即是消费者又是供应商，有效避免网络营销的团队级差费，和传统渠道的代理中间环节，让每一个参与者都获得最大实惠。\n\t\t\t\t同时，共享淘支付平台还致力于打造一个线上线下完美结合的立体体验平台。共享淘支付平台通过线下的联盟商家、分公司、运营中心、社区体验店进行商品的展示宣传，从而让消费者在购物的同时能够有真实体验的机会，以此去弥补线上无法体验的劣势，做到了线下体验，线上订单，线下取货的完美结合。实现了电子商务与实体店的深度融合和多方互动，为消费者带来兴趣化智能购物的全新享受。\n\t\t\t\t中国是典型的区域经济，在350多个地级市里，分布着4300多万家企业，80%以上的中小企业及个体的销售渠道需要立足于本地的销售与服务。然而这些企业及个体，却很少有适合本地化推广的电商平台做为支撑，因此，我们说区域电子商务的发展也需要一个行业平台来推动。在接下来的时间里，共享淘支付平台将借助自身的渠道优势，通过地级市、县区的代理商去融合地域性特有的商品信息资源，建立起独具特色的区域性电子商务网点，开通本地区域性电子商务服务窗口，为本地中小企业及个体的商品销售和信息交流提供全方位的服务。平台最终会建立起以“网上商城+地面体验店+区域性电子商务+自助服务终端”为主体的立体化体验营销模式。它把网络营销、连锁经营、传统渠道、服务和消费链等做了整合，把顾客的需求导向具体以信息为中心进行管理。在从一方提供给另一方或多方的过程中体现双方或多方的价值，以此实现共赢。从而建立一个交互式、立体式、区域性的全方位立体体验商城。\n\t\t\t\t我们正在打造一个全新的销售渠道，我们正在缔造一个新时代的网上平台，让您从消费者变成经营者和受益者，让您快乐消费、轻松致富，拥有一个成功的事业平台。选择比努力更重要，现在就是未来，共享淘支付平台与您共创美好时代。\n\n\n
</string>
    <string name="payUser">消费成创客  分享就赚钱\n让消费的钱每天都给你分红</string>
    <string name="spay">下载淘支付\t\t消费领积分\n购物就省钱\t\t分享更赚钱</string>
    <string name="Merchant_registration_title">商家注册协议</string>
    <string name="tv_withdraw_deposit" formatted="false">提现说明：\n1、会员提现手续费12%，商家货款手续费0.6%，到账时已扣除，提现不再扣除；\n2、会员最低100，商家最低50元起提；\n3、每日只能提现一次，工作日以内提现T+1到账，周五、周六、周日提现周一到账。</string>
</resources>