<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp38"
        android:src="@drawable/logo_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp42"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:layout_marginTop="@dimen/dp50"
        android:gravity="center"
        android:orientation="horizontal">

        <com.hmkj.taozhifu.view.emoji.NOPasteEditText
            android:id="@+id/inviterCode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableLeft="@drawable/ico_me_normal"
            android:drawablePadding="@dimen/dp17"
            android:hint="@string/input_inviter_code"
            android:maxLength="6"
            android:maxLines="1"
            android:textColor="@color/j_cccccc"
            android:textSize="@dimen/sp14" />

        <ImageView
            android:id="@+id/sao_sao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_richscan_store" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:background="@color/e6e6e6" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp42"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:orientation="vertical">

        <com.hmkj.taozhifu.utils.ClearEditText
            android:id="@+id/mPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:drawableLeft="@drawable/ico_phone_login"
            android:drawablePadding="@dimen/dp17"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:textColor="@color/j_cccccc"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:background="@color/e6e6e6" />

    <!--输入验证码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/code_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/white"
                android:drawableLeft="@drawable/ico_captcha_login"
                android:drawablePadding="@dimen/dp17"
                android:hint="@string/input_code"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@color/j_cccccc"
                android:textSize="@dimen/sp14" />
        </RelativeLayout>

        <TextView
            android:id="@+id/mGain_Code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/take_code"
            android:textColor="@color/accent"
            android:textSize="@dimen/sp11" />
    </LinearLayout>

    <TextView
        android:id="@+id/mTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp21.5"
        android:textColor="@color/j_999999"
        android:textSize="@dimen/sp11" />
    <!--用户协议-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/mCheck_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_style"
            android:checked="true"
            android:paddingLeft="@dimen/dp5"
            android:text="@string/my_read"
            android:textColor="@color/j_333333"
            android:textSize="@dimen/sp12" />

        <TextView
            android:id="@+id/mDeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/per_deal"
            android:textColor="@color/accent"
            android:textSize="@dimen/sp12" />
    </LinearLayout>

    <Button
        android:id="@+id/mNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:layout_marginTop="@dimen/dp30"
        android:background="@drawable/btn_login_bg"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/sp15" />

</LinearLayout>
