<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/action_bar" />

    <include layout="@layout/common_horizontal_line_taodian" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp42"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:orientation="vertical">

        <EditText
            android:id="@+id/mPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:drawableLeft="@drawable/ico_phone_login"
            android:drawablePadding="@dimen/dp17"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1"
            android:textColor="@color/j_cccccc"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0.5"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:background="@color/e6e6e6" />
    <!--输入验证码-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/code_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/view"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/white"
                android:drawableLeft="@drawable/ico_captcha_login"
                android:drawablePadding="@dimen/dp17"
                android:hint="@string/input_code"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:textColor="@color/j_cccccc"
                android:textSize="@dimen/sp14" />
        </RelativeLayout>

        <TextView
            android:id="@+id/mGain_Code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/take_code"
            android:textColor="@color/accent"
            android:textSize="@dimen/sp11" />
    </LinearLayout>

    <TextView
        android:id="@+id/mTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/dp21.5"
        android:textColor="@color/j_999999"
        android:textSize="@dimen/sp11" />

    <Button
        android:id="@+id/mNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp21.5"
        android:layout_marginRight="@dimen/dp21.5"
        android:layout_marginTop="@dimen/dp30"
        android:background="@drawable/btn_login_bg"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/sp15" />
</LinearLayout>
