<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/common_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp43.5"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/dp12">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrive_account"
                    android:textColor="@color/j_333333"
                    android:textSize="@dimen/sp14" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dp12">

                <RadioGroup
                    android:id="@+id/payWay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/wxAnumber"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/ico_wechat_share"
                        android:drawablePadding="@dimen/dp20"
                        android:drawableRight="@drawable/checkbox_style"
                        android:gravity="center|left"
                        android:paddingRight="@dimen/dp20"
                        android:visibility="gone"
                        android:text="微信" />

                    <RadioButton
                        android:id="@+id/zfbAnumber"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:button="@null"
                        android:drawableLeft="@drawable/umeng_socialize_alipay"
                        android:drawablePadding="@dimen/dp20"
                        android:drawableRight="@drawable/checkbox_style"
                        android:gravity="center|left"
                        android:paddingRight="@dimen/dp20"
                        android:text="支付宝" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/alipay_ly"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp3"
                android:visibility="gone">

                <EditText
                    android:id="@+id/edt_account_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/dp17"
                    android:hint="@string/input_alipay"
                    android:lines="1"
                    android:maxLines="1"
                    android:padding="@dimen/dp12"
                    android:textColor="@color/j_cccccc"
                    android:textSize="@dimen/sp14" />

                <EditText
                    android:id="@+id/edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:drawablePadding="@dimen/dp17"
                    android:enabled="false"
                    android:hint="@string/input_name"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="@dimen/dp12"
                    android:textColor="@color/j_cccccc"
                    android:textSize="@dimen/sp14" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp10"
                android:background="@color/e6e6e6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp12"
                android:text="@string/tixian_money" />

            <EditText
                android:id="@+id/tixian_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:drawableLeft="@drawable/ico_rmb"
                android:inputType="numberDecimal"
                android:lines="1"
                android:maxLines="1"
                android:padding="@dimen/dp12" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp0.5"
                android:layout_marginLeft="@dimen/dp12"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/balance_money"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/dp12"
                    android:text="余额0.00"
                    android:textColor="@color/j_666666"
                    android:textSize="@dimen/sp12" />

                <TextView
                    android:id="@+id/all_withdraw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp12"
                    android:text="@string/all_tixian"
                    android:textColor="@color/accent"
                    android:textSize="@dimen/dp12"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/sure_withdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp12"
                android:layout_marginRight="@dimen/dp12"
                android:layout_marginTop="@dimen/dp30"
                android:background="@drawable/btn_login_bg"
                android:text="@string/sure_tixian"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:lineSpacingExtra="@dimen/dp5"
                android:padding="@dimen/dp12"
                android:text="@string/tv_withdraw_deposit"
                android:textSize="@dimen/sp12" />
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/include_view_dp1" />

    <include layout="@layout/action_bar" />

    <include layout="@layout/common_horizontal_line_taodian" />


</LinearLayout>